# c-Project

baba_is_you/: CMakeLists.txt  beggin.cpp  beggin.h  beggin.ui  board.ui  controll.cpp  controll.h  form.cpp  form.h  form.ui  gameUi.cpp  gameUi.h  gameUi.ui  lose.cpp  lose.h  lose.ui  main  main.cpp  save.cpp  save.h  save.ui  win.cpp  win.h  win.ui
baba_is_you/View/: gameView.cpp  gameView.h  pictures.cpp
baba_is_you/controller/: file.cpp  file.h  gameController.cpp  gameController.h  save.ui
baba_is_you/model/: babaIsyou.cpp  babaIsyou.h  board.cpp  board.h  direction.h  elem.cpp  elem.h  element.h  elementType.h  gameState.h  position.cpp  position.h  square.cpp  square.h
baba_is_you/ressource/: a.txt  level_0.txt  level_3.txt  ok.txt
baba_is_you/ressource/.cmake/api/v1/reply/: cache-v2-80837bfcc32cd1143f26.json  cmakeFiles-v1-c1641612850c3eda939c.json  codemodel-v2-3e76f91788fe7f6131b9.json  index-2023-04-20T16-57-47-0392.json  target-baba_is_you-Debug-ff83012f3621a3b17ae0.json
baba_is_you/util/: obs.h
